# FeatureDetection

./: CMakeLists.txt  README.md  app.py  harris.py  main.py  requirements.txt
cpp/src/: corners.hpp  descriptors.cpp  descriptors.hpp  fast.cpp  harris.cpp  main.cpp
python/src/: descriptors.py  fast.py  harris.py
